--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,5 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/philippmeder/visdata"
+Issues = "https://github.com/philippmeder/visdata/issues"
