--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,12 @@ authors = [
 ]
 description = "Package for data visualisation."
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.13"
+dependencies = [
+  "numpy>2",
+  "matplotlib>3.8"
+]
 classifiers = [
     "Intended Audience :: Science/Research",
     "Programming Language :: Python :: 3",
